Updated styles for redesigned layout.

--- a/src/htdocs/modules/pager/0-0-1/css/index.scss
+++ b/src/htdocs/modules/pager/0-0-1/css/index.scss
@@ -1,10 +1,7 @@
-@import 'mmi.scss';
-@import 'alert.scss';
-
-
 .pager {
 
 	.disclaimer, .legend {
+		display:block;
 		font-size:.8em;
 		color:#666;
 	}
@@ -16,7 +13,7 @@
 		text-decoration:underline;
 		cursor:pointer;
 		display:block;
-		font-size:.9em;
+		font-size:.8em;
 	}
 
 	.mmi {
@@ -25,6 +22,7 @@
 		padding:2px 8px;
 		text-align:center;
 		margin-right:8px;
+		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
 	}
 
 	.mmiI {
@@ -37,53 +35,45 @@
 		padding:0;
 
 		> li {
-			margin:4px 0;
+			clear:left;
+			margin:6px 0;
 			padding:4px 0;
 
 			.mmi {
 				cursor:pointer;
 			}
 
+			.population-value {
+				float:right;
+				margin:4px 0;
+			}
+
 			> dl {
 				display:none;
 				float:left;
-				clear:left;
-				width:100%;
-				font-size:.9em;
-				margin:0 0 0 0;
-				-webkit-margin-before:0;
-				-webkit-margin-after:0;
-				padding:6px 0 12px 72px;
-				border-bottom:1px solid #999;
+				margin:8px 0 8px 72px;
+				padding:0;
+				font-size:.8em;
+				color:#999;
 
 				> dt, > dd {
 					display:block;
 					float:left;
-					margin:0;
-					padding:0;
+					display:inline-block;
+					margin:0 8px 0 0;
 				}
 				> dt {
 					clear:left;
-					color:#666;
 
 					&:after {
 						content:':';
 					}
 				}
-				> dd {
-					margin-left:8px;
-				}
 			}
-
 			&.expanded > dl {
 				display:block;
 			}
 
-			&:after {
-				display:block;
-				content:' ';
-				clear:left;
-			}
 		}
 	}
 
@@ -96,22 +86,19 @@
 			position:relative;
 			margin:4px 0;
 			padding:4px 72px 2px 0;
-			// border-bottom:1px solid #ccc;
 			white-space:nowrap;
 			overflow:hidden;
 			text-overflow:ellipsis;
 
 			> .population {
 				position:absolute;
-				top:0;
-				bottom:0;
+				top:7px;
+				bottom:6px;
 				background-color:#fff;
 				right:0;
-				width:64px;
 				padding-left:8px;
 				z-index:10;
 				text-align:right;
-				line-height:2.0;
 			}
 		}
 
@@ -121,33 +108,6 @@
 
 		&.show-additional > .city-additional {
 			display:block;
-		}
-	}
-}
-
-@media screen and (min-width:768px) {
-	.pager {
-		.alert-wrapper {
-			float:right;
-			width:40%;
-			clear:right;
-		}
-		.map-wrapper {
-			width:60%;
-			padding-right:16px;
-		}
-		.exposure-wrapper {
-			float:left;
-			width:60%;
-			padding-right:16px;
-		}
-		.comment-wrapper {
-			float:left;
-			width:40%;
-		}
-		.city-wrapper {
-			float:left;
-			width:40%;
 		}
 	}
 }
