Moved SvgImageMap.scss import into main event page css

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -8,6 +8,9 @@
 
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
 
+/* svg image map */
+@import '../../../node_modules/hazdev-svgimagemap/src/svgimagemap/SvgImageMap.scss';
+
 // --------------------------------------------------
 // Page-Wide Styles
 // --------------------------------------------------
