Add style so that tablist content extends as much as the tablist navigation.

--- a/src/htdocs/modules/shakemap/0-0-1/css/index.scss
+++ b/src/htdocs/modules/shakemap/0-0-1/css/index.scss
@@ -1,6 +1,10 @@
 /* responsive table */
 @import '../../../../css/_responsiveTable.scss';
 
+.tablist-panel {
+	min-height:400px;
+}
+
 div.stations {
 
 	> div.toggle {
