Scope css selector tablist-panel min-height for shakemap content only.

--- a/src/htdocs/modules/shakemap/0-0-1/css/index.scss
+++ b/src/htdocs/modules/shakemap/0-0-1/css/index.scss
@@ -1,7 +1,7 @@
 /* responsive table */
 @import '../../../../css/_responsiveTable.scss';
 
-.tablist-panel {
+.shakemap > .tablist-panel {
 	min-height:400px;
 }
 
