Changed order of impact bubbles and fixed styles so they match. Pager was 1px shorter than the others

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -58,7 +58,7 @@
 			border:0;
 			padding:0;
 			text-align:left;
-			display:inline;
+			display:inline-block;
 			font-size:0; /* removes hover effect that spills over */
 
 			img {
