Separate page styles into partials, add to index.scss.

--- a/src/htdocs/modules/impact/0-0-1/css/index.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/index.scss
@@ -1,412 +1,8 @@
+/* responsive table */
 $td_padding: 10px;
 $th_padding: $td_padding * 2;
-
-/* responsive table */
 @import '../../../../css/_responsiveTable.scss';
 
-/**********************
-      DYFI Styles
-***********************/
-
-.hidden {
-	display:none;
-}
-
-.mmi span {
-	display: block;
-	padding: 10px 0;
-	text-align: center;
-	border-radius: 2px;
-	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-}
-
-/* span with role="button" */
-.button {
-	display: inline-block;
-	color: #fff;
-	background: #4e7ab9;
-	border-radius: 3px;
-	padding: 8px 15px;
-	text-align: center;
-	text-decoration: none;
-}
-
-.button:hover {
-	cursor:pointer;
-	background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0% ,rgba(0,0,0,0) 100%);
-}
-
-.dyfi-error,
-.dyfi-info {
-	display: inline-block;
-	padding:10px;
-}
-
-.dyfi-error {
-	background: #fcc;
-}
-
-.dyfi-info {
-	background: #eee;
-}
-
-@media screen and (max-width: 767px) {
-
-	.dyfi-error,
-	.dyfi-info {
-		display:block;
-	}
-
-	.button {
-		display:block;
-		width:100%;
-	}
-
-	.mmi span {
-		max-width: 50%;
-	}
-
-	.dyfi {
-		/*** Label the data ***/
-		td:nth-of-type(1):before { content: "Location"; }
-		td:nth-of-type(2):before { content: "MMI"; }
-		td:nth-of-type(3):before { content: "Responses"; }
-		td:nth-of-type(4):before { content: "Distance"; }
-	}
-}
-
-
-
-/**********************
-      PAGER Styles
-***********************/
-
-
-.pager {
-
-	.disclaimer, .legend {
-		display:block;
-		font-size:.8em;
-		color:#666;
-	}
-	.legend {
-		font-style:italic;
-	}
-	.toggle {
-		color:#00C;
-		text-decoration:underline;
-		cursor:pointer;
-		display:block;
-		font-size:.8em;
-	}
-
-	.mmi {
-		display:inline-block;
-		width:64px;
-		padding:2px 8px;
-		text-align:center;
-		margin-right:8px;
-		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
-	}
-
-	.mmiI {
-		border:1px solid #999;
-	}
-
-	.pager-exposures {
-		list-style:none;
-		margin:0;
-		padding:0;
-
-		> li {
-			clear:left;
-			margin:8px 0;
-			padding:0;
-
-			.mmi {
-				cursor:pointer;
-			}
-
-			.population-value {
-				float:right;
-				margin:4px 0;
-			}
-
-			> dl {
-				display:none;
-				float:left;
-				width:100%;
-				margin:4px 0 8px 0;
-				padding:0 0 0 72px;
-				font-size:.8em;
-				color:#999;
-
-				> dt, > dd {
-					display:block;
-					float:left;
-					display:inline-block;
-					margin:0 8px 0 0;
-				}
-				> dt {
-					clear:left;
-
-					&:after {
-						content:':';
-					}
-				}
-			}
-			&.expanded > dl {
-				display:block;
-			}
-
-		}
-	}
-
-	.pager-cities {
-		list-style:none;
-		margin:0;
-		padding:0;
-
-		> li {
-			position:relative;
-			margin:8px 0;
-			padding:0 72px 0 0;
-			white-space:nowrap;
-			overflow:hidden;
-			text-overflow:ellipsis;
-
-			> .population {
-				position:absolute;
-				top:7px;
-				bottom:6px;
-				background-color:#fff;
-				right:0;
-				padding-left:8px;
-				z-index:10;
-				text-align:right;
-			}
-		}
-
-		> .city-additional {
-			display:none;
-		}
-
-		&.show-additional > .city-additional {
-			display:block;
-		}
-	}
-}
-
-
-
-/**********************
-    Shakemap Styles
-***********************/
-
-.shakemap > .tablist-panel {
-	min-height:400px;
-}
-
-div.station-toggle {
-	position:relative;
-	border:1px solid #ddd;
-	background:#f6f6f6;
-	color:#666;
-	margin:10px 0;
-	padding:10px 15px;
-
-	> h3 {
-		display: block;
-		margin:0;
-		color: #444;
-		font-weight: normal;
-		padding-right: 70px;
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-
-		> em {
-			padding-right: 10px;
-			font-weight:bold;
-			font-style:normal;
-		}
-	}
-
-	abbr {
-		border-bottom:1px dotted #999;
-	}
-
-	> a.expand {
-		display: block;
-		position: absolute;
-		top: 3px;
-		right: 15px;
-		margin: 10px 0 0px;
-		padding: 0;
-		color: #00f;
-		cursor: pointer;
-		padding: 2px;
-		font-size: 12px;
-
-		&:hover {
-			text-decoration: underline;
-		}
-
-		&:before {
-			display:inline-block;
-			width:10px;
-			content:'+ ';
-		}
-	}
-
-	> .station-details {
-		display:none;
-	}
-}
-
-// toggle station details
-div.show-station-details {
-
-	> a.expand:before {
-		content: '- ';
-	}
-
-	> .station-details {
-		display:block;
-	}
-}
-
-ul.station-summary {
-	list-style:none;
-	margin:10px 0 0;
-	padding:0;
-
-	> li {
-		display:inline-block;
-		width:25%;
-		max-width:100px;
-		padding:5px;
-		text-align:center;
-		line-height:1;
-
-		&.mmiI {
-			border: 1px solid #eee;
-		}
-
-		&.mmi {
-
-			color:#000;
-			text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-			border-radius:2px;
-
-			> abbr {
-				color:#000;
-			}
-		}
-
-		> span {
-			display:block;
-			padding:0; // override styles from dyfi responses
-			max-width: 100%; // override styles from dyfi responses
-		}
-
-		> abbr {
-			font-size:12px;
-			color:#999;
-		}
-	}
-}
-
-div.station-details {
-
-	> dl {
-		color:#666;
-		font-size:13px;
-		margin:15px 0;
-
-		> dt {
-			font-weight: bold;
-			float: left;
-			width: 60px;
-		}
-
-		> dd {
-			-webkit-margin-start:0;
-			-moz-margin-start:0;
-			padding-left: 70px;
-
-			&:after {
-				content: '';
-				display: block;
-				clear: both;
-			}
-		}
-	}
-}
-
-table.station-components {
-	margin:15px 0 0;
-	font-size:13px;
-
-	> thead {
-		background:#999;
-	}
-}
-
-.station-flag {
-	color:#999;
-}
-
-
-@media screen and (max-width:767px) {
-
-	.shakemap > .tablist-panel {
-		padding:0 10px;
-	}
-
-	ul.station-summary {
-		font-size:15px;
-	}
-
-	.station-details > table.station-components {
-		margin:15px 0;
-		border:none;
-		background:none;
-		text-align:left;
-
-		> tbody > tr {
-			text-align:left;
-			background:none;
-
-			> td,
-			> td:before {
-				padding:5px 15px 0;
-			}
-
-			> td {
-				border:none;
-				padding-left:60px;
-			}
-
-			> td:first-child {
-				font-weight:bold;
-				border-bottom:1px solid #ccc;
-				padding-left:0;
-				padding-bottom:5px;
-				margin-top:20px;
-			}
-
-			> td:before {
-				padding-left:0;
-			}
-
-			//> td:nth-of-type(1):before { content: 'name:'; }
-			> td:nth-of-type(2):before { content: 'acc:'; }
-			> td:nth-of-type(3):before { content: 'vel:'; }
-			> td:nth-of-type(4):before { content: 'psa03:'; }
-			> td:nth-of-type(5):before { content: 'psa10:'; }
-			> td:nth-of-type(6):before { content: 'psa30:'; }
-		}
-	}
-}
-
+@import 'DYFIPage';
+@import 'ShakeMapPage';
+@import 'PagerPage';
