Update the summary sections so that the individual pages determine whether to display a summary or details view.

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -90,7 +90,8 @@
 }
 
 .roman {font-family: Tahoma, Verdana, Segoe, sans-serif;}
-.mmiI{color:#000000 !important; background-color:#FFFFFF !important;}
+.mmiI{color:#000000 !important; background-color:#FFFFFF !important;
+		box-shadow: 0 0 1px #666;}
 .mmiII{color:#000000 !important; background-color:#ACD8E9 !important;}
 .mmiIII{color:#000000 !important; background-color:#ACD8E9 !important;}
 .mmiIV{color:#000000 !important; background-color:#83D0DA !important;}
