--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -1,40 +1,38 @@
-.hypocenters {
 
-	> .summary {
+.hypocenter-summary {
 
-		> .header {
-			padding: 30px 0 0;
-			color: #444;
-			width:85px;
+	> .header {
+		padding: 30px 0 0;
+		color: #444;
+		width:85px;
 
-			> header {
-				margin:0;
-				font-size: 30px;
-				line-height: 36px;
-				font-weight:bold;
-			}
-
-			> small {
-				font-size:inherit;
-			}
+		> header {
+			margin:0;
+			font-size: 30px;
+			line-height: 36px;
+			font-weight:bold;
 		}
 
-		> .info {
-			padding:15px 10px 0 100px;
-			font-size:14px;
-
-			> span {
-				display:block;
-				margin:0;
-			}
-
+		> small {
+			font-size:inherit;
 		}
+	}
+
+	> .info {
+		padding:30px 10px 0 100px;
+		font-size:14px;
+
+		> span {
+			display:block;
+			margin:0;
+		}
+
 	}
 }
 
 @media screen and (min-width:768px) {
 
-	.hypocenters > .summary > .info {
+	.hypocenters-summary > .info {
 		padding:30px 10px 0 100px;
 		font-size:14px;
 	}
