--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -5,6 +5,7 @@
 @import 'event-footer';
 @import 'downloads';
 @import 'MouseOverLayer';
+@import 'alerts';
 
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
 
