--- a/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
@@ -31,7 +31,7 @@
 	background:rgba(158, 192, 248, 0.1);
 }
 
-.summary.preferred::after {
+.summary.preferred:after {
 	position: absolute;
 	top: 1px;
 	left: 4px;
@@ -42,7 +42,7 @@
 	z-index:3;
 }
 
-.summary.preferred::before {
+.summary.preferred:before {
 	content: '';
 	position: absolute;
 	top: -1px;
