Update responsive table styles. Include a seperate style/ selector for vertically organized tables.

--- a/src/htdocs/modules/scientific/0-0-1/css/index.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/index.scss
@@ -2,26 +2,28 @@
 
 
 // TODO: move this to a different style sheet
-table.tabular {
-	background-color:#fefefe;
-	border: 1px solid #eee;
-	border-collapse: collapse;
-	color:#333;
+// table.tabular {
+// 	background-color:#fefefe;
+// 	border: 1px solid #eee;
+// 	border-collapse: collapse;
+// 	color:#333;
 
-	th {
-		background-color:#eee;
-	}
+// 	th {
+// 		background-color:#eee;
+// 	}
 
-	th, td {
-		padding:5px;
-		border-right: 1px solid #ddd;
-		border-bottom:1px solid #ddd;
-	}
-}
+// 	th, td {
+// 		padding:5px;
+// 		border-right: 1px solid #ddd;
+// 		border-bottom:1px solid #ddd;
+// 	}
+// }
 
 // TODO: move this to a different style sheet
 canvas {
 	max-width: 100%;
+	display:block;
+	margin:auto;
 }
 
 // TODO: move this to a different style sheet
