--- a/src/htdocs/css/_responsiveTable.scss
+++ b/src/htdocs/css/_responsiveTable.scss
@@ -1,3 +1,13 @@
+/*
+	These styles were inspired by:
+
+	Simple Little Table by John Sardine
+	http://johnsardine.com/freebies/dl-html-css/simple-little-tab/
+
+	Responsive Data Tables by Chris Coyier
+	http://css-tricks.com/responsive-data-tables/
+
+ */
 $td_padding: 10px !default; 
 $td_background_color: rgb(248,248,248) !default;
 
@@ -12,7 +22,8 @@ $tr_striping_color: rgb(251,251,251) !default;
 	padding-left: $padding_left;
 }
 
-table.responsive {
+table.responsive,
+table.responsive-vertical {
 	width: 100%;
 	border-collapse: collapse;
 	margin-bottom:15px;
@@ -33,10 +44,6 @@ table.responsive {
 				border-bottom:1px solid #ccc;
 				border-top:1px solid #ccc;
 			}
-
-			> th:first-child {
-				@include first-cell($td_padding * 2);
-			}
 	}
 
 	> tbody {
@@ -56,10 +63,6 @@ table.responsive {
 				border-left:1px solid #e0e0e0;
 			}
 
-			> td:first-child {
-				@include first-cell($td_padding * 2);
-			}
-
 			>td > small {
 				display:block;
 			}
@@ -68,11 +71,72 @@ table.responsive {
 
 }
 
+
+
+table.responsive {
+
+	> thead > tr > th:first-child {
+		@include first-cell($td_padding * 2);
+	}
+
+	> tbody > tr > td:first-child {
+		@include first-cell($td_padding * 2);
+	}
+}
+
+table.responsive-vertical {
+
+	font-size:16px;
+
+	> tbody > tr {
+
+		> th {
+			background: $th_background_color;
+			color:#333;
+			font-weight:bold;
+			//padding:10px 15px;
+			padding:10px;
+			border-bottom: 1px solid #e0e0e0;
+			border-top: 1px solid #e0e0e0;
+		}
+
+
+		th:first-child {
+			border-top: none;
+		}
+
+		> td {
+			//padding:10px 15px;
+			padding:10px;
+		}
+	}
+}
+
+
+@media screen and (max-width: 480px) {
+
+	table.responsive-vertical {
+
+		> tbody > tr {
+			> td {
+				//padding:9px 12px;
+				padding:10px;
+			}
+
+			> th {
+				//padding:9px 12px;
+				padding:10px;
+			}
+		}
+	}
+}
+
+
 @media screen and (max-width: 767px) {
 
-	/* Force table to not be like tables anymore */
-	thead, tbody, th, td, tr {
-		display: block;
+
+	table.responsive-vertical {
+		font-size:14px;
 	}
 
 	table.responsive {
@@ -80,6 +144,12 @@ table.responsive {
 		display:block;
 		text-align: left;
 		color:#666;
+		font-size:14px;
+
+		/* Force table to not be like tables anymore */
+		thead, tbody, th, td, tr {
+			display: block;
+		}
 
 		/* Hide table headers (but not display: none;, for accessibility) */
 		> thead > tr {
@@ -89,12 +159,21 @@ table.responsive {
 		}
 
 		> tbody > tr {
+			padding:10px;
+			border-bottom:1px solid #e0e0e0;
+
 
 			>td {
 				border-left: none;
+				border-bottom:none;
+				border-top:1px solid #e0e0e0;
 				position: relative;
-				padding: $td_padding + 5px $td_padding;
+				padding: $td_padding;
 				padding-left: 36%;
+			}
+
+			> td:first-child {
+				border-top:none;
 			}
 
 			> td:first-child {
@@ -107,12 +186,11 @@ table.responsive {
 				top: 0;
 				left: 0;
 				width: 36%;
-				padding: $td_padding + 5px $td_padding;
+				padding: $td_padding;
 				white-space: nowrap;
 				font-weight: bold;
 				text-align: left;
 			}
 		}
 	}
-
 }
