set up styles for summary info

--- a/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
@@ -152,6 +152,13 @@ table.station-components {
 	color:#999;
 }
 
+.shakemap-summary {
+	> .info
+		>span {
+			display: block;
+			margin: 0;
+		}
+}
 
 .shakemap > .tablist-panel {
 	padding:0 10px;
