Add title text to text overflow section.

--- a/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
@@ -33,6 +33,24 @@
 		width:100%;
 		max-width:480px;
 
+		th {
+			width: 30%;
+		}
+
+		td {
+			width: 70%;
+
+
+			> span.truncate {
+				width:100%;
+				display:block;
+				max-width:336px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
+
 		th, td {
 			text-align: left;
 		}
@@ -65,7 +83,7 @@
 		max-width:480px;
 
 		td {
-			text-align: right;
+			text-align: center;
 		}
 	}
 
