Necessary to get overflow:ellipsis to work on code.

--- a/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
@@ -32,9 +32,10 @@
 	.info-table {
 		width:100%;
 		max-width:480px;
+		table-layout:fixed;
 
 		th {
-			width: 30%;
+			width: 120px;
 		}
 
 		td {
