--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -67,22 +67,26 @@
 
 }
 
+.origin > table.responsive > tbody > tr > td.number {
+	text-align:right;
+	padding-right:1.5em;
+}
 @media screen and (max-width:767px) {
   .origin > table.responsive {
-  td:nth-of-type(1):before { content: 'NSCL'; }
+  td:nth-of-type(1):before { content:'NSCL'; }
 
-  td:nth-of-type(2):before { content: 'Distance'; }
+  td:nth-of-type(2):before { content:'Distance'; }
 
-  td:nth-of-type(3):before { content: 'Azimuth'; }
+  td:nth-of-type(3):before { content:'Azimuth'; }
 
-  td:nth-of-type(4):before { content: 'Phase'; }
+  td:nth-of-type(4):before { content:'Phase'; }
 
-  td:nth-of-type(5):before { content: 'Arival Time'; }
+  td:nth-of-type(5):before { content:'Arival Time'; }
 
-  td:nth-of-type(6):before { content: 'Status'; }
+  td:nth-of-type(6):before { content:'Status'; }
 
-  td:nth-of-type(7):before { content: 'Residual'; }
+  td:nth-of-type(7):before { content:'Residual'; }
 
-  td:nth-of-type(8):before { content: 'Weight'; }
+  td:nth-of-type(8):before { content:'Weight'; }
 	}
 }
