Re-factor styles to be more efficient

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -37,9 +37,18 @@
 		font-size:14px;
 	}
 
-	.origin > table.responsive > tbody > tr > td.number {
-		text-align:right;
-		padding-right:1.5em;
+	.hypocenter-phase {
+		font-size:smaller;
+		> tr {
+			> .distance,
+			> .azimuth,
+			> .arrival,
+			> .residual,
+			> .weight {
+				text-align:right;
+				margin-right:1.5em;
+			}
+		}
 	}
 
 }
