Fix merge conflict in style sheet with spacing

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -80,6 +80,10 @@
 	}
 }
 
+.origin > table.responsive > tbody > tr > td.number {
+	text-align:right;
+	padding-right:1.5em;
+}
 @media screen and (max-width:767px) {
 	.origin > table.responsive {
 		td:nth-of-type(1):before { content: 'NSCL'; }
