--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -35,3 +35,12 @@ $th_padding: $td_padding * 2;
 	content:' ';
 	clear:both;
 }
+
+.truncate {
+	width:100%;
+	display:block;
+	//max-width:336px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
