--- a/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
@@ -1,59 +1,3 @@
-div.station-toggle {
-	position:relative;
-	border:1px solid #ddd;
-	background:#f6f6f6;
-	color:#666;
-	margin:10px 0;
-	padding:10px 15px;
-
-	> h3 {
-		display: block;
-		margin:0;
-		color: #444;
-		font-weight: normal;
-		padding-right: 70px;
-		overflow: hidden;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-
-		> em {
-			padding-right: 10px;
-			font-weight:bold;
-			font-style:normal;
-		}
-	}
-
-	abbr {
-		border-bottom:1px dotted #999;
-	}
-
-	> a.expand {
-		display: block;
-		position: absolute;
-		top: 3px;
-		right: 15px;
-		margin: 10px 0 0px;
-		padding: 0;
-		color: #00f;
-		cursor: pointer;
-		padding: 2px;
-		font-size: 12px;
-
-		&:hover {
-			text-decoration: underline;
-		}
-
-		&:before {
-			display:inline-block;
-			width:10px;
-			content:'+ ';
-		}
-	}
-
-	> .station-details {
-		display:none;
-	}
-}
 
 // toggle station details
 div.show-station-details {
@@ -62,80 +6,10 @@ div.show-station-details {
 		content: '- ';
 	}
 
-	> .station-details {
-		display:block;
-	}
+	// > .station-details {
+	// 	display:block;
+	// }
 }
-
-ul.station-summary {
-	list-style:none;
-	margin:10px 0 0;
-	padding:0;
-
-	> li {
-		display:inline-block;
-		width:25%;
-		max-width:100px;
-		padding:5px;
-		text-align:center;
-		line-height:1;
-
-		&.mmiI {
-			border: 1px solid #eee;
-		}
-
-		&.mmi {
-
-			color:#000;
-			text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-			border-radius:2px;
-
-			> abbr {
-				color:#000;
-			}
-		}
-
-		> span {
-			display:block;
-			padding:0; // override styles from dyfi responses
-			max-width: 100%; // override styles from dyfi responses
-		}
-
-		> abbr {
-			font-size:12px;
-			color:#999;
-		}
-	}
-}
-
-
-div.station-details {
-
-	> dl {
-		color:#666;
-		font-size:13px;
-		margin:15px 0;
-
-		> dt {
-			font-weight: bold;
-			float: left;
-			width: 60px;
-		}
-
-		> dd {
-			-webkit-margin-start:0;
-			-moz-margin-start:0;
-			padding-left: 70px;
-
-			&:after {
-				content: '';
-				display: block;
-				clear: both;
-			}
-		}
-	}
-}
-
 
 .station-flag {
 	color:#999;
