Add colored box to the magnitude

--- a/src/htdocs/css/_responsiveTableScientific.scss
+++ b/src/htdocs/css/_responsiveTableScientific.scss
@@ -137,6 +137,12 @@ div.station-details {
 			color:#999;
 		}
 	}
+
+	.magnitude {
+		color:#000000 !important;
+		background-color:#FFFFFF !important;
+		box-shadow: 0 0 1px #666;
+	}
 }
 
 table.station-components,
