un-bold :before content and change its color to #777

--- a/src/htdocs/css/_responsiveTableScientific.scss
+++ b/src/htdocs/css/_responsiveTableScientific.scss
@@ -259,6 +259,8 @@ table.networkmagnitude-stations {
 			}
 			> td:before {
 				padding-left:0;
+				font-weight:normal;
+				color:#777;
 			}
 
 		}
