--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -76,3 +76,39 @@
 		font-size:14px;
 	}
 }
+
+@media screen and (max-width:767px) {
+
+	// Scientific -> Hypocenter -> Phases
+	table.hypocenter-phase {
+		td:nth-of-type(1):before { content: 'Distance'; }
+		td:nth-of-type(2):before { content: 'Azimuth'; }
+		td:nth-of-type(3):before { content: 'Phase'; }
+		td:nth-of-type(4):before { content: 'Arival Time'; }
+		td:nth-of-type(5):before { content: 'Status'; }
+		td:nth-of-type(6):before { content: 'Residual'; }
+		td:nth-of-type(7):before { content: 'Weight'; }
+		> tbody {
+			> tr {
+				> .distance,
+				> .azimuth,
+				> .arrival,
+				> .residual,
+				> .weight {
+					text-align:left;
+				}
+			}
+		}
+	}
+
+	// Scientific -> Hypocenter -> Magnitudes
+	table.networkmagnitude-stations {
+		td:nth-of-type(2):before { content: 'Type'; }
+		td:nth-of-type(3):before { content: 'Amplitude'; }
+		td:nth-of-type(4):before { content: 'Period'; }
+		td:nth-of-type(5):before { content: 'Status'; }
+		td:nth-of-type(6):before { content: 'Magnitude'; }
+		td:nth-of-type(7):before { content: 'Weight'; }
+	}
+
+}
