--- a/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_ShakeMapPage.scss
@@ -27,6 +27,50 @@
 	padding:0 10px;
 }
 
+.station-summary {
+	> li {
+		&.mmiI {
+			border: 1px solid #eee;
+		}
+
+		&.mmi {
+			color:#000;
+			text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+			border-radius:2px;
+
+			> abbr {
+				color:#000;
+			}
+		}
+	}
+}
+
+div.station-details {
+	> dl {
+		color:#666;
+		font-size:13px;
+		margin:15px 0;
+
+		> dt {
+			font-weight: bold;
+			float: left;
+			width: 60px;
+		}
+
+		> dd {
+			-webkit-margin-start:0;
+			-moz-margin-start:0;
+			padding-left: 70px;
+
+			&:after {
+				content: '';
+				display: block;
+				clear: both;
+			}
+		}
+	}
+}
+
 @media screen and (max-width:767px) {
 
 	// Impact -> Shakemap -> Staion List
