Remove redundant responsive table styles

--- a/src/htdocs/css/template.scss
+++ b/src/htdocs/css/template.scss
@@ -1,3 +1,4 @@
 @import '../../../node_modules/hazdev-template/src/htdocs/css/template';
+@import '../../../node_modules/hazdev-template/src/htdocs/css/responsive-table';
 @import '../../../node_modules/hazdev-template/src/htdocs/css/flexible-grid';
 img {max-width:100%;}
