--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIPage.scss
@@ -70,17 +70,19 @@
 		}
 	}
 
-	.dyfi {
-		.mmi span {
-			max-width:50%;
+	.dyfi-responses {
+		.dyfi {
+			.mmi span {
+				padding:5px 0;
+				width:50px;
+			}
 		}
 	}
 
 	.dyfi {
 		/*** Label the data ***/
-		td:nth-of-type(1):before { content:"Location"; }
-		td:nth-of-type(2):before { content:"MMI"; }
-		td:nth-of-type(3):before { content:"Responses"; }
-		td:nth-of-type(4):before { content:"Distance"; }
+		td:nth-of-type(1):before { content:"MMI"; }
+		td:nth-of-type(2):before { content:"Responses"; }
+		td:nth-of-type(3):before { content:"Distance"; }
 	}
 }
